--- a/telegram_bot_module/config.yaml
+++ b/telegram_bot_module/config.yaml
@@ -20,8 +20,8 @@ sources:
     name: "Go Careers"
   # - username: "@torchbearer_core"
   #   name: "Torchbearer Core"
-  # - username: "@TorchBearerr"  
-  #   name: "Torchbearer"
+  - username: "@TorchBearerr"  
+    name: "Torchbearer"
   # - username: "@off_campus_jobs_and_internships"  
   #   name: "Off Campus Jobs and Internships"
   # - username: "@freshershunt"  
