--- a/telegram_bot_module/config.yaml
+++ b/telegram_bot_module/config.yaml
@@ -6,24 +6,24 @@ telegram:
 
 # Source Groups/Channels to fetch posts from
 sources:
-  # - username: "@jobs_and_internships_updates"
-  #   name: "Jobs and Internships"
+  - username: "@jobs_and_internships_updates"
+    name: "Jobs and Internships"
   - username: "@jobs_and_internships_updates1"
     name: "Jobs and Internships1"
   - username: "@internfreak"
     name: "InternFreak"
   - username: "@TechUprise_Updates"
     name: "Tech Uprise"
-  # - username: "@dot_aware"
-  #   name: "Dot Aware"
+  - username: "@dot_aware"
+    name: "Dot Aware"
   - username: "@gocareers"  
     name: "Go Careers"
   # - username: "@torchbearer_core"
   #   name: "Torchbearer Core"
   - username: "@TorchBearerr"  
     name: "Torchbearer"
-  # - username: "@off_campus_jobs_and_internships"  
-  #   name: "Off Campus Jobs and Internships"
+  - username: "@off_campus_jobs_and_internships"  
+    name: "Off Campus Jobs and Internships"
   # - username: "@freshershunt"  
   #   name: "Freshers Hunt"
   # - username: "@getjobss"
