Update Telegram bot user list in config.yaml
Replaced commented user entry with a new user entry for job updates.

--- a/telegram_bot_module/config.yaml
+++ b/telegram_bot_module/config.yaml
@@ -18,8 +18,8 @@ sources:
     name: "Dot Aware"
   - username: "@gocareers"  
     name: "Go Careers"
-  # - username: "@torchbearer_core"
-  #   name: "Torchbearer Core"
+  - username: "@join_Daily_Jobs_Placement_Update"
+    name: "join_Daily_Jobs_Placement_Update"
   - username: "@TorchBearerr"  
     name: "Torchbearer"
   - username: "@off_campus_jobs_and_internships"  
