all_value_finall

--- a/dm_promotion_service/config/extraction_groups.yaml
+++ b/dm_promotion_service/config/extraction_groups.yaml
@@ -1,8 +1,10 @@
 extraction:
   frequency_days: 1
   groups:
-    - username: "@deloitte_exam_answers"
+    - username: "@my_promotions"
       name: "My Promotions"
+    # - username: "@codechef_answers"
+    #   name: "My Promotions"
 
     # - username: "@leetcode_answers"
     #   name: "LeetCode Answers"
@@ -14,6 +16,6 @@ extraction:
  
 
 dm_limits:
-  max_per_day: 2
+  max_per_day: 1
 
 promotion_channel: "Jobs_Lelo"
