--- a/.github/workflows/telegram.yml
+++ b/.github/workflows/telegram.yml
@@ -44,6 +44,7 @@ jobs:
         env:
           TELEGRAM_API_ID: ${{ secrets.TELEGRAM_API_ID }}
           TELEGRAM_API_HASH: ${{ secrets.TELEGRAM_API_HASH }}
+          GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
         run: |
           python run_once.py
 
